--- a/Lecture_1/Lec_1.tex
+++ b/Lecture_1/Lec_1.tex
@@ -1,41 +1,63 @@
 \documentclass{article}
-%
+
 \usepackage[mathcal,mathbf]{euler}
-%\usepackage{theorem,amsmath,enumerate,fancyhdr,amssymb,accents,amsfonts}
 \usepackage{theorem,amsmath,enumerate,fancyhdr,amssymb,amsfonts}
 \usepackage[pdftex]{graphics}
-%% In order to be consistent use the notation in the following style
-%% file as much as you can. You may take a look at the file to see
-%% what is available.
+
 \usepackage{myDefs}
 
 
-%%
-%% Here is where the title goes. Write down lecture number for ?
 \title{ 
-Algorithmic Learning Theory\\
+Discrete Optimization\\
 Spring 2017\\
-Lecture ? %1 or 2 or 3 etc
+Lecture 1
 }
 \author{
-{\bf Instructor:} Farid Alizadeh\\
-{\bf Scribe:} Your name
+{\bf Instructor:} Endre Boros;\\
+{\bf Scribe:} Yuan Qu
 }
-\date{1/18/2017} %put the date of the lecture here NOT the date the note was written
+\date{01/23/2017} %put the date of the lecture here NOT the date the note was written
 
 \begin{document}
 
 \pagestyle{fancy}
-\lhead{{\bf scribe:}{Your name}
-\\{\bf Lecture 2} } %insert lecture number
-\rhead{{\bf Date: }01/18/2017} %enter lecture date NOT today's date
+\lhead{{\bf scribe:}{Yuan Qu}
+\\{\bf Lecture 1} }
+\rhead{{\bf Date: }01/23/2017} %enter lecture date NOT today's date
 
 \maketitle
+
 %
 %%\oddsidemargin 0.0in 
 %%\textwidth 6.25in 
 %%\topmargin -0.25in 
-%%\textheight 8.25in    
+%%\textheight 8.25in 
+
+% \begin{enumerate}
+% \item 
+% \item
+% \end{enumerate}
+
+% \section{  }
+% \subsection{ }
+% \subsubsection{ }
+
+% \begin{center}
+% \includegraphics[scale=0.5]{filename.pdf}
+% \end{center
+
+% \begin{center}{
+%     \begin{tabular}{|c|c|}
+%     \hline
+%     $f()$ & Output\\
+%     \hline
+%     regression & numerical \\
+%     \hline
+%     classification & categorical \\
+%     \hline
+%     \end{tabular}
+% }
+% \end{center}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Below  is where the body of your notes goes.
@@ -44,29 +66,12 @@ Lecture ? %1 or 2 or 3 etc
 \begin{document}   
 \medskip
 
-%% Write a quick short paragraph summarizing the topic covered in
-%% the lecture here. You may use itemization or enumeration
-\section{Overview} %give a one paragraph short description of the topics
-%\begin{enumerate}
-%\item 
-%\item
-%etc
-%\end{enumerate}
+\section{Overview}
 
-% Add additional sections and sub section as need with appropriate
-% titles
-% section{  }
+\section{Optimization}{
+    \(Max: g(x)\) --Objective function
+    
+}
 
-%\subsection{ }
-%\subsubsection{ }
-
-%% For including graphs or pictures use a .pdf pr .png type pictures
-%% format and use the follwoing to include it in your file. Note
-%% that scale isuse tp resize the graph if it is too big or too
-%% small:
-
-%\begin{center}
-%\includegraphics[scale=0.5]{filename.pdf}
-%\end{center
 
 \end{document}
