--- a/Assignment_1/assignment_1.tex
+++ b/Assignment_1/assignment_1.tex
@@ -24,9 +24,14 @@
         So, this difines an independence system \(\mathcal{F}\subseteq \mathrm{2}^{\mathit{E}}\)
     }
     \subsubsection*{b.}{
-        According to the defination, we have,
+        According to the defination, we have
         \[\mathrm{n=6} \Rightarrow \mathit{S} \subseteq \mathit{E} = \{ \mathrm{1,2,3,4,5,6}\}\]
         \[\mathit{a}=\mathrm{(1,1,1,4,4,5), b=8} \Rightarrow \mathit{a}(\mathit{S}) = \sum_{\mathit{j} \in \mathit{S}}\mathit{a_j} \leqslant \mathrm{8}\]
+        According to the defination of \textit{rank}, we have
+        \[\mathit{r(X)}=\underset{\mathit{F} \in \mathcal{F}}{\mathit{max}} \lvert \mathit{F} \cap \mathit{X} \rvert=\underset{\mathit{B} \in \mathcal{B}_{\mathit{X}}} {\mathit{max}} \lvert \mathit{B} \rvert \text{, and } \mathit{\rho(X)} = \underset{\mathit{B} \in \mathcal{B}_{\mathit{X}}} {\mathit{min}} \lvert \mathit{B} \rvert\]
+        We can find that
+        \[\mathcal{B}_{\mathit{X}} = \mathrm{\big{\{} \{1,2,3,4\}, \{1,2,3,5\}, \{1,2,3,6\}, \{4,5\}\big{\}}}\]
+        So that we have \(\mathit{r(X)}=\mathrm{4}, \mathit{\rho(X)}=\mathrm{2}\)
     }
 }
 
