--- a/Assignment_1/assignment_1.tex
+++ b/Assignment_1/assignment_1.tex
@@ -33,6 +33,10 @@
         \[\mathcal{B}_{\mathit{X}} = \mathrm{\big{\{} \{1,2,3,4\}, \{1,2,3,5\}, \{1,2,3,6\}, \{4,5\}\big{\}}}\]
         So that we have \(\mathit{r(X)}=\mathrm{4}, \mathit{\rho(X)}=\mathrm{2}\)
     }
+    \subsubsection*{c.}{
+        \[\mathit{O\big{(}r(X)\big{)}=O(n log n)}\]
+        As the greedy algorithm, order the \(\mathit{a}\) from small to large, use the \textit{Best-in Greedy} to select numbers from the smallest. So the complexity is \(\mathit{O(n log n)}\)
+    }
 }
 
 \section*{Question 2}{
