--- a/Assignment_1/assignment_1.tex
+++ b/Assignment_1/assignment_1.tex
@@ -37,6 +37,10 @@
         \[\mathit{O\big{(}r(X)\big{)}=O(n log n)}\]
         As the greedy algorithm, order the \(\mathit{a}\) from small to large, use the \textit{Best-in Greedy} to select numbers from the smallest. So the complexity is \(\mathit{O(n log n)}\)
     }
+    \subsubsection*{d.}{
+        \[\mathit{O\big{(}\rho(X)\big{)}=O(n^{\mathrm{2}})}\]
+        Need to find all the subset of \(\mathit{S}\) So the complexity is \(\mathit{O(n^2)}\)
+    }
 }
 
 \section*{Question 2}{
