--- a/Assignment_1/assignment_1.tex
+++ b/Assignment_1/assignment_1.tex
@@ -41,6 +41,9 @@
         \[\mathit{O\big{(}\rho(X)\big{)}=O(n^{\mathrm{2}})}\]
         Need to find all the subset of \(\mathit{S}\) So the complexity is \(\mathit{O(n^2)}\)
     }
+    \subsubsection*{e.}}{
+        As \textit{b.} mentioned, \(\mathit{B_3}=\mathrm{\{1,2,3,6\}},\mathit{B_4}=\mathrm{\{4,5\}}\). If we use \textit{Best-in Greedy}, we may lose the \(\mathit{B_4}\), because there is a solution when the first choice is 6. 
+    }
 }
 
 \section*{Question 2}{
