--- a/Assignment_1/assignment_1.tex
+++ b/Assignment_1/assignment_1.tex
@@ -14,7 +14,7 @@
 \rhead{{\bf Date: }01/31/2017} 
 
 \section*{Question 1}{
-    \subsubsection*{a.}{
+    \subsection*{a.}{
         First, prove that \(\emptyset \in \mathit{S}\).\\
         Obviously, we have \(\emptyset \in \mathit{E}=\{\mathrm{1,2,...,n}\}\), and \(\mathit{a}(\emptyset)=\sum_{\mathit{j} \in \emptyset}=\mathrm{0} \leqslant \mathit{b} \in \mathbb{R}_{+}\)\\
         So, \(\emptyset \in \mathit{S}\).\\
@@ -23,7 +23,7 @@
         \[\mathit{X} \subseteq \mathit{Y} \Rightarrow \mathit{a}(\mathit{X}) = \sum_{\mathit{j} \in \mathit{X}}\mathit{a_j} = \sum_{\mathit{i} \in \mathit{Y}}\mathit{a_i} - \sum_{\mathit{j} \in \mathit{Y} \setminus \mathit{X}}\mathit{a_j} \leqslant \sum_{\mathit{j} \in \mathit{Y}}\mathit{a_j} \leqslant \mathit{b}\]
         So, this difines an independence system \(\mathcal{F}\subseteq \mathrm{2}^{\mathit{E}}\)
     }
-    \subsubsection*{b.}{
+    \subsection*{b.}{
         According to the defination, we have
         \[\mathrm{n=6} \Rightarrow \mathit{S} \subseteq \mathit{E} = \{ \mathrm{1,2,3,4,5,6}\}\]
         \[\mathit{a}=\mathrm{(1,1,1,4,4,5), b=8} \Rightarrow \mathit{a}(\mathit{S}) = \sum_{\mathit{j} \in \mathit{S}}\mathit{a_j} \leqslant \mathrm{8}\]
@@ -33,21 +33,65 @@
         \[\mathcal{B}_{\mathit{X}} = \mathrm{\big{\{} \{1,2,3,4\}, \{1,2,3,5\}, \{1,2,3,6\}, \{4,5\}\big{\}}}\]
         So that we have \(\mathit{r(X)}=\mathrm{4}, \mathit{\rho(X)}=\mathrm{2}\)
     }
-    \subsubsection*{c.}{
+    \subsection*{c.}{
         \[\mathit{O\big{(}r(X)\big{)}=O(n log n)}\]
         As the greedy algorithm, order the \(\mathit{a}\) from small to large, use the \textit{Best-in Greedy} to select numbers from the smallest. So the complexity is \(\mathit{O(n log n)}\)
     }
-    \subsubsection*{d.}{
+    \subsection*{d.}{
         \[\mathit{O\big{(}\rho(X)\big{)}=O(n^{\mathrm{2}})}\]
         Need to find all the subset of \(\mathit{S}\) So the complexity is \(\mathit{O(n^2)}\)
     }
-    \subsubsection*{e.}}{
-        As \textit{b.} mentioned, \(\mathit{B_3}=\mathrm{\{1,2,3,6\}},\mathit{B_4}=\mathrm{\{4,5\}}\). If we use \textit{Best-in Greedy}, we may lose the \(\mathit{B_4}\), because there is a solution when the first choice is 6. 
+    \subsection*{e.}{
+        As \textit{b.} mentioned, \(\mathit{B}_{\mathrm{3}}=\mathrm{\{1,2,3,6\}},\mathit{B}_{\mathrm{4}}=\mathrm{\{4,5\}}\). If we use \textit{Best-in Greedy}, we may lose the \(\mathit{B_4}\), because there is a solution when the first choice is 6. 
     }
 }
 
 \section*{Question 2}{
-
+    \subsection*{a.}{
+        We have the job set \(\mathit{E}\) like following
+        \begin{center}{
+            \begin{tabular}{|c|c|c|c|c|c|c|c|}
+            \hline
+            Job & 1 & 2 & 3 & 4 & 5 & 6 & 7 \\
+            \hline
+            Due & 3 & 2 & 4 & 1 & 4 & 4 & 6 \\
+            \hline
+            Profit & 2 & 3 & 4 & 3 & 3 & 6 & 7 \\
+            \hline
+            \end{tabular}
+        }
+        \end{center} 
+        The purpose is to find a independent subset \(\mathit{S} \subseteq \mathit{E}\)\\
+        The initialization of \textit{Best-in Greedy} is sorting the jobs, as following
+        \begin{center}{
+            \begin{tabular}{|c|c|c|c|c|c|c|c|}
+            \hline
+            Job & 7 & 6 & 3 & 5 & 4 & 2 & 1 \\
+            \hline
+            Due & 6 & 4 & 4 & 4 & 1 & 2 & 3 \\
+            \hline
+            Profit & 7 & 6 & 4 & 3 & 3 & 3 & 2 \\
+            \hline
+            \end{tabular}
+        }
+        \end{center} 
+        Then, as \textit{Best-in Greedy}, the process would be
+        \begin{center}{
+            \begin{tabular}{|c|c|c|c|c|}
+            \hline
+            Date & 1 & 2 & 3 & 4 \\
+            \hline
+            Job & 7 & 6 & 3 & 5 \\
+            \hline
+            Due & 6 & 4 & 4 & 4 \\
+            \hline
+            Profit & 7 & 6 & 4 & 3 \\
+            \hline
+            \end{tabular}
+        }
+        \end{center}
+        The total profit would be: \(\mathrm{7+6+4+3=20}\)
+    }
 }
 
 \section*{Question 3}{
