--- a/Assignment_1/assignment_1.tex
+++ b/Assignment_1/assignment_1.tex
@@ -137,9 +137,24 @@
 
         Supposed \(\lvert \mathit{V(G)} \rvert = \mathrm{n}\). 
 
-        Apparently, no matter which vertices are chosen, for \(\mathrm{n}\) is \textit{odd}, the size of all the bases of \(\mathit{X}\) is equal to \(\frac{\mathit{n}+\mathrm{1}}{\mathrm{2}}\), and for \(\mathrm{n}\) is \textit{even}, the size of all the bases of \(\mathit{X}\) is equal to \(\frac{\mathit{n}}{\mathrm{2}}\).\\
+        Apparently, no matter which vertices are chosen, for \(\mathrm{n}\) is \textit{odd}, the size of all the bases of \(\mathit{X}\) is equal to \(\frac{\mathit{n}-\mathrm{1}}{\mathrm{2}}\), and for \(\mathrm{n}\) is \textit{even}, the size of all the bases of \(\mathit{X}\) is equal to \(\frac{\mathit{n}}{\mathrm{2}}\).\\
 
         So, \(\big{(}\mathit{V(G)},\mathcal{F}\big{)}\) is a matroid.
+    }
+    \subsection*{b.}{
+        While \(\mathit{n} = \mathrm{5}\), according to \textit{a.}, so that the size of bases \(\mathit{r(S)} = \frac{\mathit{n}-\mathrm{1}}{\mathrm{2}}=\mathrm{2}\).
+
+        Therefore, the defining inequalities for \(\mathit{P}_{\mathit{V(G)},\mathcal{F}}\):
+
+        \[\mathit{S}_{\mathrm{1}} = \{ \mathit{x}_{\mathrm{1}}, \mathit{x}_{\mathrm{3}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{1}}) = \mathit{x}_{\mathrm{1}} + \mathit{x}_{\mathrm{3}} \leqslant \mathit{r(S)} = 2\]
+
+        \[\mathit{S}_{\mathrm{2}} = \{ \mathit{x}_{\mathrm{2}}, \mathit{x}_{\mathrm{4}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{2}}) = \mathit{x}_{\mathrm{2}} + \mathit{x}_{\mathrm{4}} \leqslant \mathit{r(S)} = 2\]
+
+        \[\mathit{S}_{\mathrm{3}} = \{ \mathit{x}_{\mathrm{3}}, \mathit{x}_{\mathrm{5}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{3}}) = \mathit{x}_{\mathrm{3}} + \mathit{x}_{\mathrm{5}} \leqslant \mathit{r(S)} = 2\]
+
+        \[\mathit{S}_{\mathrm{4}} = \{ \mathit{x}_{\mathrm{4}}, \mathit{x}_{\mathrm{1}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{4}}) = \mathit{x}_{\mathrm{4}} + \mathit{x}_{\mathrm{1}} \leqslant \mathit{r(S)} = 2\]
+
+        \[\mathit{S}_{\mathrm{5}} = \{ \mathit{x}_{\mathrm{5}}, \mathit{x}_{\mathrm{2}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{5}}) = \mathit{x}_{\mathrm{5}} + \mathit{x}_{\mathrm{2}} \leqslant \mathit{r(S)} = 2\]
     }
 }
 
