--- a/Assignment_1/assignment_1.tex
+++ b/Assignment_1/assignment_1.tex
@@ -156,6 +156,9 @@
 
         \[\mathit{S}_{\mathrm{5}} = \{ \mathit{x}_{\mathrm{5}}, \mathit{x}_{\mathrm{2}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{5}}) = \mathit{x}_{\mathrm{5}} + \mathit{x}_{\mathrm{2}} \leqslant \mathit{r(S)} = 2\]
     }
+    \subsection*{c.}{
+        Yes. According to the \textit{Edmonds(1970)} The output is the linear, especially binary in this case, combination of the characteristic vectors, which are integral. So the ploytope \(\mathit{P}_{\mathit{V(G)},\mathcal{F}}\) is integral.
+    }
 }
 
 \section*{Question 4}{
