--- a/Assignment_1/assignment_1.tex
+++ b/Assignment_1/assignment_1.tex
@@ -194,7 +194,9 @@
 }
 
 \section*{Question 5}{
-
+    \subsection*{a.}{
+        \[\lvert \mathit{B} \rvert = \mathrm{\frac{15 \times 3 + 18 \times 5 + 12 \times 15}{1+2+4} = 45}\]
+    }
 }
 
 \section*{Question 6}{
