--- a/Assignment_1/assignment_1.tex
+++ b/Assignment_1/assignment_1.tex
@@ -109,22 +109,22 @@
             \end{tabular}
         }
         \end{center} 
-        Then, as \textit{Best-in Greedy}, the process would be
+        Then, as \textit{Best-in Greedy}, the job set will be \( \mathrm{7, 6, 3, 5, 4}\) and the process would be
         \begin{center}{
-            \begin{tabular}{|c|c|c|c|c|}
+            \begin{tabular}{|c|c|c|c|c|c|}
             \hline
-            Date & 1 & 2 & 3 & 4 \\
+            Date & 1 & 2 & 3 & 4 & 5 \\
             \hline
-            Job & 7 & 6 & 3 & 5 \\
+            Job & 4 & 5 & 3 & 6 & 7 \\
             \hline
-            Due & 6 & 4 & 4 & 4 \\
+            Due & 1 & 4 & 4 & 4 & 6 \\
             \hline
-            Profit & 7 & 6 & 4 & 3 \\
+            Profit & 3 & 3 & 4 & 6 & 7 \\
             \hline
             \end{tabular}
         }
         \end{center}
-        The total profit would be: \(\mathrm{7+6+4+3=20}\)
+        The total profit would be: \(\mathrm{7 + 6 + 4 + 3 + 3 = 23}\)
     }
     \subsection*{b.}{
         Suppose \(\mathit{A}\) and \(\mathit{B}\) are two independent subsets of \(\mathit{E}\), so we have \(\mathit{A}, \mathit{B} \subseteq \mathit{E}\), and \(\mathit{A}, \mathit{B} \in \mathcal{F}\). Construct \(\mathit{A}\) and \(\mathit{B}\) as:
