--- a/Assignment_1/assignment_1.tex
+++ b/Assignment_1/assignment_1.tex
@@ -35,9 +35,8 @@
 \begin{document}
 
 \pagestyle{fancy}
-\lhead{{\bf Assignment 1}
-\\{\bf Author: }{Yuan Qu} } 
-\rhead{{\bf Date: }01/31/2017} 
+\lhead{{\bf Discrete Optimization Hw-1}} 
+\rhead{{\bf Yuan Qu}} 
 
 \section*{Problem 1}{
     \subsection*{a.}{
@@ -374,8 +373,7 @@ A [*,*] (tr)
 8    0   2   2   0   0   0
 9    1   4   0   0   0   0
 10   0   3   0   0   1   0
-11   2   0   0   0   2   0
-;
+11   2   0   0   0   2   0;
 
 X [*] :=
  1   869
@@ -388,8 +386,7 @@ X [*] :=
  8  2875
  9     0
 10  1350
-11  2675
-;
+11  2675;
     \end{lstlisting}
 }
 
