--- a/Assignment_1/assignment_1.tex
+++ b/Assignment_1/assignment_1.tex
@@ -71,8 +71,8 @@
         As the greedy algorithm, order the \(\mathit{a}\) from small to large, use the \textit{Best-in Greedy} to select numbers from the smallest. So the complexity is \(\mathit{O(n log n)}\)
     }
     \subsection*{d.}{
-        \[\mathit{O\big{(}\rho(X)\big{)}=O(n^{\mathrm{2}})}\]
-        Need to find all the subset of \(\mathit{S}\) So the complexity is \(\mathit{O(n^2)}\)
+        \[\mathit{O\big{(}\rho(X)\big{)}=O(\mathrm{2}^n)}\]
+        Need to find all the subset of \(\mathit{S}\) So the complexity is \(\mathit{O(\mathrm{2}^n)}\)
     }
     \subsection*{e.}{
         As \textit{b.} mentioned, \(\mathit{B}_{\mathrm{3}}=\mathrm{\{1,2,3,6\}},\mathit{B}_{\mathrm{4}}=\mathrm{\{4,5\}}\). If we use \textit{Best-in Greedy}, we may lose the \(\mathit{B}_{\mathrm{4}}\), because there is a solution when the first choice is 6. 
@@ -171,15 +171,15 @@
 
         Therefore, the defining inequalities for \(\mathit{P}_{\mathit{V(G)},\mathcal{F}}\):
 
-        \[\mathit{S}_{\mathrm{1}} = \{ \mathit{x}_{\mathrm{1}}, \mathit{x}_{\mathrm{3}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{1}}) = \mathit{x}_{\mathrm{1}} + \mathit{x}_{\mathrm{3}} \leqslant \mathit{r(S)} = 2\]
+        \[\mathit{S}_{\mathrm{1}} = \{ \mathit{x}_{\mathrm{1}}, \mathit{x}_{\mathrm{4}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{1}}) = \mathit{x}_{\mathrm{1}} + \mathit{x}_{\mathrm{4}} \leqslant \mathit{r(S)} = 2\]
 
-        \[\mathit{S}_{\mathrm{2}} = \{ \mathit{x}_{\mathrm{2}}, \mathit{x}_{\mathrm{4}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{2}}) = \mathit{x}_{\mathrm{2}} + \mathit{x}_{\mathrm{4}} \leqslant \mathit{r(S)} = 2\]
+        \[\mathit{S}_{\mathrm{2}} = \{ \mathit{x}_{\mathrm{2}}, \mathit{x}_{\mathrm{5}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{2}}) = \mathit{x}_{\mathrm{2}} + \mathit{x}_{\mathrm{5}} \leqslant \mathit{r(S)} = 2\]
 
-        \[\mathit{S}_{\mathrm{3}} = \{ \mathit{x}_{\mathrm{3}}, \mathit{x}_{\mathrm{5}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{3}}) = \mathit{x}_{\mathrm{3}} + \mathit{x}_{\mathrm{5}} \leqslant \mathit{r(S)} = 2\]
+        \[\mathit{S}_{\mathrm{3}} = \{ \mathit{x}_{\mathrm{3}}, \mathit{x}_{\mathrm{1}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{3}}) = \mathit{x}_{\mathrm{3}} + \mathit{x}_{\mathrm{1}} \leqslant \mathit{r(S)} = 2\]
 
-        \[\mathit{S}_{\mathrm{4}} = \{ \mathit{x}_{\mathrm{4}}, \mathit{x}_{\mathrm{1}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{4}}) = \mathit{x}_{\mathrm{4}} + \mathit{x}_{\mathrm{1}} \leqslant \mathit{r(S)} = 2\]
+        \[\mathit{S}_{\mathrm{4}} = \{ \mathit{x}_{\mathrm{4}}, \mathit{x}_{\mathrm{2}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{4}}) = \mathit{x}_{\mathrm{4}} + \mathit{x}_{\mathrm{2}} \leqslant \mathit{r(S)} = 2\]
 
-        \[\mathit{S}_{\mathrm{5}} = \{ \mathit{x}_{\mathrm{5}}, \mathit{x}_{\mathrm{2}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{5}}) = \mathit{x}_{\mathrm{5}} + \mathit{x}_{\mathrm{2}} \leqslant \mathit{r(S)} = 2\]
+        \[\mathit{S}_{\mathrm{5}} = \{ \mathit{x}_{\mathrm{5}}, \mathit{x}_{\mathrm{3}}\} \quad \mathit{x}(\mathit{S}_{\mathrm{5}}) = \mathit{x}_{\mathrm{5}} + \mathit{x}_{\mathrm{3}} \leqslant \mathit{r(S)} = 2\]
     }
     \subsection*{c.}{
         Yes. According to the \textit{Edmonds(1970)} The output is the linear, especially binary in this case, combination of the characteristic vectors, which are integral. So the ploytope \(\mathit{P}_{\mathit{V(G)},\mathcal{F}}\) is integral.
